--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -17,6 +17,7 @@
 .navbar-items {
   position: relative;
   width: 25%;
+  height: 55px;
   display: flex;
   justify-content: center;
   align-items: center;
